# yt_poetry

./: pyproject.toml
blog/blog/: settings.py
