[tool.poetry]
name = "yt-poetry"
version = "0.1.0"
description = "Youtube Tutorial"
authors = ["Damilola Ogungbesan"]
readme = "README.md"
packages = [{include = "yt_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
